--- a/stylep.css
+++ b/stylep.css
@@ -384,4 +384,78 @@ details
   }
 .instabtn:hover {
     background-color: rgb(4, 92, 92);
+    
+}
+
+.popup {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 100;
+    padding: 1rem 2rem;
+    max-width: 600px;
+    background: white;
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    box-shadow: 0 0 20px rgba(0, 0, 0, .35);
+}
+.panel1, #flip {
+    padding: 5px;
+    text-align: center;
+    background-color: grey;
+    border: solid 1px #c3c3c3;
+  }
+  
+  .panel1 {
+   
+    display: none;
+  }
+  .cover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.hidden {
+    display: none;
+}
+
+.form-container {
+    background-color: white;
+    width: 590px;
+    max-height: 90%;
+    overflow: auto;
+    border-radius: 25px;
+    box-shadow: 0 5px 30px 10px rgba(0, 0, 0, .15);
+}
+.nav {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#sign-in {
+    font-size: 1.125em;
+    font-weight: bold;
+    margin-right: 20px;
+}
+
+.gradient-btn {
+    color: white;
+    font-size: 1.125em;
+    font-weight: bold;
+    padding: 20px 35px;
+    border-radius: 40px;
+    background: linear-gradient(var(--gradeint-angle), var(--green), var(--purple));
+    transition: transform 300ms ease-in-out;
 }
